--- a/PROGRAM/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAM/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/baseline_lock_24"
+    android:background="@drawable/p"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -56,7 +56,7 @@
                 android:inputType="textPassword"
                 android:padding="8dp"
                 android:hint="Password"
-                android:drawableLeft="@drawable/baseline_account_circle_24"
+                android:drawableLeft="@drawable/baseline_lock_24"
                 android:textColor="@color/black"
                 android:drawablePadding="8dp"/>
 
