--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_main.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_main.xml
@@ -31,21 +31,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btnViewTicket"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginStart="33dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginTop="17dp"/>
 
     <Button
         android:id="@+id/btnViewTicket"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Melihat Tikett"
+        android:text="Melihat Pesanan"
         app:layout_constraintTop_toBottomOf="@id/btnOrderTicket"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginTop="18dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
