--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_login.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_login.xml
@@ -8,10 +8,10 @@
 
     <TextView
         android:id="@+id/tvWelcome"
-        android:layout_width="0dp"
+        android:layout_width="dp"
         android:layout_height="wrap_content"
         android:text="Selamat datang di Mensnorkeling"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
