--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -13,3 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/etName"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="Tiket" />
