--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -35,3 +35,12 @@
         android:background="@android:color/transparent"
         android:padding="10dp"
         android:textColor="@android:color/black"/>
+
+
+    <EditText
+        android:id="@+id/etDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Tanggal Pembelian"
+        android:focusable="true"
+        android:clickable="true"
