--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -67,3 +67,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginStart="35dp"
+
+        android:layout_marginEnd="35dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
