--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_login.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_login.xml
@@ -22,3 +22,8 @@
         android:layout_marginEnd="32dp"
         android:layout_marginTop="32dp"
         app:layout_constraintVertical_chainStyle="packed"/>
+    <ImageView
+        android:id="@+id/imgProfile"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/user"
