--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_login.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_login.xml
@@ -34,3 +34,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="User Profile" />
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
