--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -5,4 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".activity_order"
     android:background="@drawable/menyelam3">
-    
+    <ImageView
+        android:id="@+id/imgProfile"
+        android:layout_width="200dp"
