--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -8,3 +8,5 @@
     <ImageView
         android:id="@+id/imgProfile"
         android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:src="@drawable/user"
