--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -17,3 +17,6 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="Tiket" />
+    <EditText
+        android:id="@+id/etName"
+        android:layout_width="0dp"
