Nanda: membuat edittext

--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -20,3 +20,5 @@
     <EditText
         android:id="@+id/etName"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Nama Anda"
