Nanda: membuat edittext

--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -36,3 +36,5 @@
     <EditText
         android:id="@+id/etDate"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Tanggal Pembelian"
