Nanda: membuat edittext

--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -38,3 +38,5 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Tanggal Pembelian"
+        android:focusable="true"
+        android:clickable="true"
