--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -40,3 +40,5 @@
         android:hint="Tanggal Pembelian"
         android:focusable="true"
         android:clickable="true"
+        app:layout_constraintTop_toBottomOf="@id/etName"
+        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
