--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -42,3 +42,5 @@
         android:clickable="true"
         app:layout_constraintTop_toBottomOf="@id/etName"
         app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
