--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -46,4 +46,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
         android:layout_marginStart="32dp"
-        
+        android:layout_marginEnd="32dp"
+        android:background="@android:color/transparent"
