--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -48,3 +48,5 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
+        android:padding="10dp"
+        android:textColor="@android:color/black"/>
