Nanda: membuat edittext

--- a/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
+++ b/PROGRAM/TicketBookingApp/app/src/main/res/layout/activity_order.xml
@@ -53,3 +53,5 @@
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Pesan Sekarang"
